<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_heading1" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_body1" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_heading2" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_body2" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_heading3" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_body3" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_heading4" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_body4" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_heading5" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_body5" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_heading6" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_body6" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_heading7" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_body7" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_heading8" />

        <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text_body8" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>