<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ScrollingActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.ScrollTest.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.ScrollTest.PopupOverlay" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@android:drawable/ic_dialog_email" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:accessibilityHeading="true"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_heading1" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_body1" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:accessibilityHeading="true"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_heading2" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_body2" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:accessibilityHeading="true"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_heading3" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_body3" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:accessibilityHeading="true"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_heading4" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_body4" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:accessibilityHeading="true"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_heading5" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_body5" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:accessibilityHeading="true"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_heading6" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_body6" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:accessibilityHeading="true"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_heading7" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_body7" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:accessibilityHeading="true"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_heading8" />

                <TextView
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/text_body8" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
